syntax = "proto3";

import "google/protobuf/any.proto";
import "protobuf/A2L.proto";

option go_package = "./../pkg/a2l";

service A2L {
  rpc GetTreeFromA2L (A2LRequest) returns (TreeResponse) {}
  rpc GetJSONFromTree (JSONFromTreeRequest) returns (JSONResponse) {}
  rpc GetTreeFromJSON (JSONRequest) returns (TreeResponse) {}
  rpc GetA2LFromTree (TreeRequest) returns (A2LResponse) {}
}

message A2LRequest {
  string a2l = 1;
}

message A2LResponse {
  string a2l = 1;
  optional string error = 2;
}

message JSONFromTreeRequest {
  google.protobuf.Any tree = 1;
  bool sort_keys = 2;
  optional uint32 indent = 3;
}

message TreeRequest {
  RootNodeType tree = 1;
}

message TreeResponse {
  RootNodeType tree = 1;
  optional string error = 2;
}

message JSONRequest {
  string json = 1;
}

message JSONResponse {
  string json = 1;
  optional string error = 2;
}