syntax = "proto3";

option go_package = "./../pkg/a2l";

message IntType {
  int32 Value = 1;
  uint32 Base = 2;
  uint32 Size = 3;
}

message LongType {
  int32 Value = 1;
  uint32 Base = 2;
  uint32 Size = 3;
}

message FloatType {
  float Value = 1;
  optional string IntegralSign = 2;
  uint32 IntegralSize = 3;
  uint32 DecimalSize = 4;
  // uint32 FractionalSize = 4;
  optional string ExponentSign = 5;
  uint32 ExponentSize = 6;
}

message IdentType {
  string Value = 1;
}

message StringType {
  string Value = 1;
}

message TagType {
  string Value = 1;
}